--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.4",
     "react-transition-group": "^2.5.3",
     "reactstrap": "^7.1.0",
